--- a/resources/css/ext.translate.proofread.css
+++ b/resources/css/ext.translate.proofread.css
@@ -15,7 +15,7 @@
 	border-left: 1px solid #ddd;
 	border-right: 1px solid #ddd;
 	background: #fff;
-	max-width: 900px;
+	max-width: 100%;
 }
 
 .ext-translate-container .tux-messagelist .tux-message-proofread .tux-message-item-compact:hover {
