[thpatch] [UI] Set background colors for translated, reviewed, and fuzzy units
Similar to the slightly darker background in list mode.

Change-Id: Icf99db3ca1e045ff23809530ff678c237659801f

--- a/resources/css/ext.translate.proofread.css
+++ b/resources/css/ext.translate.proofread.css
@@ -21,6 +21,33 @@
 	background: #fcfcfc;
 }
 
+.ext-translate-container .tux-messagelist .tux-message-proofread.translated .tux-message-item-compact {
+	background-color: #f0f0f0;
+	border-bottom-color: #e1e1e1;
+}
+
+.ext-translate-container .tux-messagelist .tux-message-proofread.translated .tux-message-item-compact:hover {
+	background-color: #ececec;
+}
+
+.ext-translate-container .tux-messagelist .tux-message-proofread.fuzzy .tux-message-item-compact {
+	background-color: #ffffcc;
+	border-bottom-color: #f0f0bd;
+}
+
+.ext-translate-container .tux-messagelist .tux-message-proofread.fuzzy:hover .tux-message-item-compact {
+	background-color: #fbfbc8;
+}
+
+.ext-translate-container .tux-messagelist .tux-message-proofread.proofread .tux-message-item-compact {
+	background-color: #ccffcc;
+	border-bottom-color: #bdf0bd;
+}
+
+.ext-translate-container .tux-messagelist .tux-message-proofread.proofread:hover .tux-message-item-compact {
+	background-color: #c8fbc8;
+}
+
 .ext-translate-container .tux-messagelist .tux-message-proofread:first-child .tux-message-item-compact {
 	margin-top: 10px;
 	border-top: 1px solid #ddd;
