--- a/resources/css/ext.translate.proofread.css
+++ b/resources/css/ext.translate.proofread.css
@@ -1,3 +1,9 @@
+.tux-proofread-status {
+	height: 23px;
+	width: 34px;
+	margin-right: 5px;
+}
+
 .ext-translate-container .tux-messagelist .tux-message-proofread {
 	margin: 0 auto;
 	vertical-align: middle;
@@ -107,14 +113,12 @@
 	background: left center no-repeat;
 	/* @embed */
 	background-image: linear-gradient( transparent, transparent ), url( ../images/outdated-ltr.svg );
-	height: 23px;
 }
 
 .tux-proofread-status.untranslated {
 	background: left center no-repeat;
 	/* @embed */
 	background-image: linear-gradient( transparent, transparent ), url( ../images/translate-ltr.svg );
-	height: 23px;
 }
 
 .tux-proofread-action {
