[thpatch] [UI] Hide list view and pagemode
What is this, even?

On the one hand, we have one "list" mode with a completely different
design compared to the two page and review modes. Since 2 is greater
than 1, let's focus our redesign on the page and review modes…

… but as we saw earlier, pagemode itself is just a subset of review
mode. So, let's also throw out that one, and exclusively focus the
upcoming redesign commits on review mode.

Change-Id: I6be156f14007945910339dcea59def6e343a1593

--- a/resources/css/ext.translate.messagetable.less
+++ b/resources/css/ext.translate.messagetable.less
@@ -145,6 +145,16 @@
 	}
 }
 
+.tux-action-bar {
+	// Since we remove all mode-switching buttons from this bar, it becomes
+	// invisible if no own translations are present. So, rather than
+	// permanently enabling the tux-proofread-own-translations-button, which
+	// would then do nothing, let's just force this bar into existence in any
+	// case…
+	// Combination of `min-height` and `margin` from `.tux-action-bar button`.
+	min-height: 50px;
+}
+
 .tux-action-bar .tux-statsbar {
 	position: relative;
 	top: 30px;
