[thpatch] [UI] Move the edit-mark icon to the left of tux-proofread-status
Since the background color already communicates whether a message is
untranslated, translated, fuzzy, or proofread, the status column on its
own is pretty redundant. I do agree that the edit-mark icon does serve
a useful role though, in communicating that clicking the hovered message
will edit it.
But hey, the previous tux-proofread-status icons can fulfill the same
role if we only show them when hovering over the message! And using
the edit-mark only for already translated messages makes perfect sense.
It may be called *edit*-mark for a reason!

Thankfully, edit-mark.svg is exactly the same size as the other icons…
as if upstream actually had this superior idea before. 🤔

Change-Id: Iff688d69a192c7e455ebeae17442bc15945c0efa

--- a/resources/css/ext.translate.proofread.css
+++ b/resources/css/ext.translate.proofread.css
@@ -1,4 +1,5 @@
 .tux-proofread-status {
+	visibility: hidden;
 	height: 23px;
 	width: 34px;
 	margin-right: 5px;
@@ -121,6 +122,13 @@
 	background-image: linear-gradient( transparent, transparent ), url( ../images/translate-ltr.svg );
 }
 
+.tux-proofread-status.translated,
+.tux-proofread-status.proofread {
+	background: left center no-repeat;
+	/* @embed */
+	background-image: linear-gradient( transparent, transparent ), url( ../images/edit-mark.svg );
+}
+
 .tux-proofread-action {
 	background-position: right top;
 	background-repeat: no-repeat;
@@ -160,9 +168,10 @@
 	cursor: pointer;
 	visibility: hidden;
 	text-align: right;
+	display: none;
 }
 
-.tux-message-proofread:hover .tux-proofread-edit {
+.tux-message-proofread:hover .tux-proofread-status {
 	visibility: visible;
 }
 
