[thpatch] [UI] Show translation unit IDs
Highly important!!! Translators need to know who's speaking!!!

Change-Id: If7c35ddcb7f98f5cf6c8d67c9ae270d22d421c6f

--- a/resources/css/ext.translate.proofread.css
+++ b/resources/css/ext.translate.proofread.css
@@ -5,6 +5,11 @@
 	margin-right: 5px;
 }
 
+.ext-translate-container .tux-messagelist .tux-key {
+	overflow-wrap: break-word;
+	hyphens: auto;
+}
+
 .ext-translate-container .tux-messagelist .tux-flag {
 	width: 1em;
 	height: 1em;
