--- a/resources/css/ext.translate.proofread.css
+++ b/resources/css/ext.translate.proofread.css
@@ -17,6 +17,15 @@
 	background-size: contain;
 }
 
+.ext-translate-container .tux-messagelist .tux-pagetitle {
+	margin: 0 auto;
+	padding: 0.5em;
+	border-bottom: 1px solid #f0f0f0;
+	border-left: 1px solid #ddd;
+	border-right: 1px solid #ddd;
+	display: block;
+}
+
 .ext-translate-container .tux-messagelist .tux-message-proofread {
 	margin: 0 auto;
 	vertical-align: middle;
