--- a/resources/css/ext.translate.proofread.css
+++ b/resources/css/ext.translate.proofread.css
@@ -135,20 +135,20 @@
 	background-image: linear-gradient( transparent, transparent ), url( ../images/user-small.svg );
 }
 
-.tux-proofread-status.fuzzy {
+.fuzzy .tux-proofread-status {
 	background: left center no-repeat;
 	/* @embed */
 	background-image: linear-gradient( transparent, transparent ), url( ../images/outdated-ltr.svg );
 }
 
-.tux-proofread-status.untranslated {
+.untranslated .tux-proofread-status {
 	background: left center no-repeat;
 	/* @embed */
 	background-image: linear-gradient( transparent, transparent ), url( ../images/translate-ltr.svg );
 }
 
-.tux-proofread-status.translated,
-.tux-proofread-status.proofread {
+.translated .tux-proofread-status,
+.proofread .tux-proofread-status {
 	background: left center no-repeat;
 	/* @embed */
 	background-image: linear-gradient( transparent, transparent ), url( ../images/edit-mark.svg );
