[thpatch] [UI] Enforce regular word breaks for all columns
Apparently, this is necessary to keep the flags in place with long
template text that doesn't wrap. 🤷

Change-Id: Id98d4507fb0ff33171c32286dee4158ff1655105

--- a/resources/css/ext.translate.proofread.css
+++ b/resources/css/ext.translate.proofread.css
@@ -91,6 +91,7 @@
 .ext-translate-container .tux-messagelist .tux-message-proofread .tux-message-item-compact * {
 	margin-top: 0;
 	margin-bottom: 0;
+	word-break: break-word;
 }
 
 .tux-proofread-source,
